#Copyright © 2014 Fred Mariowitsch Flügge <fmfluegge@gmail.com>
#This program is free software. It comes without any warranty, to
#the extent permitted by applicable law. You can redistribute it
#and/or modify it under the terms of the Do What The Fuck You Want
#To Public License, Version 2, as published by Sam Hocevar. See 
#http://www.wtfpl.net/ for more details.
cmake_minimum_required(VERSION 2.8)
project( StopwatchTest )
add_executable( StopwatchTest main.cpp stopwatch.h)